<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/szelek">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/szelek"
        android:layout_marginEnd="@dimen/szelek">

        <TextView
            android:id="@+id/itemTitle"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/alcim"
            android:text="@string/item_placeholder"/>

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_below="@id/itemTitle"
            android:layout_marginTop="@dimen/koztes"/>

        <TextView
            android:id="@+id/itemInfos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_info_placeholder"
            android:layout_below="@id/itemImage"
            android:layout_marginTop="@dimen/koztes"/>

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:text="@string/ar"
            android:textStyle="bold"
            android:layout_below="@id/itemInfos"
            android:layout_marginTop="@dimen/koztes"/>

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kosarba"
            android:layout_below="@id/itemPrice"
            android:layout_marginTop="@dimen/koztes"/>



    </RelativeLayout>

</androidx.cardview.widget.CardView>
